######################################################################
#
# CMakeLists.txt for dagmc tools
#
# $Id: CMakeLists.txt 6346 2014-01-27 03:33:21Z cary $
#
######################################################################

# Add subdir for scripts and sample files
#add_subdirectory(parse_materials)
add_subdirectory(dagmc_tag_eg)

